--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -3,7 +3,7 @@
 .header {
 
     &--bg {
-        height: 100%;
+        height: 100vh;
         @include bg__img("../../img/bg.png", center);
     }
     &__inner {
