В этой версии я добавил Loader🔃 но пока не работает странно:(

--- a/src/components/app/app.scss
+++ b/src/components/app/app.scss
@@ -36,7 +36,7 @@ $secondary-color: #808080;
 }
 
 ::selection {
-    background-color: #adadad;
+    background-color: rgb(215, 215, 215);
     opacity: .5;
 }
 [class*="__container"] {
