--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -9,17 +9,20 @@
         padding-bottom: 332px;
     }
     &__title {
-        color: $dark-color;
+        color: $dark-color !important;
     }
 
     &__title--my {
     }
 
     &__block {
+        gap: 20px;
     }
 
     &__item {
         width: 295px;
+        flex: 1 0 30%;
+
     }
 
     &__img {
@@ -48,3 +51,19 @@
 
     }
 }
+
+//  Media
+
+@media (max-width: 450px) {
+    .about__item {
+        flex: 1 0 100%;
+    }
+    .about__subject--mb {
+        margin-bottom: 20px;
+    }
+    .about__inner {
+        padding-top: 60px;
+        padding-bottom: 100px;
+    }
+}
+
