--- a/src/components/cart/cart.scss
+++ b/src/components/cart/cart.scss
@@ -42,6 +42,7 @@
 }
 .cart__item {
     column-gap: 32px;
+    flex: 0 1 55%;
 }
 .cart__info {
     row-gap: 20px;
@@ -84,7 +85,7 @@
     border-radius: 20px;
 }
 .scroll-container {
-    height: 100%;
+    height: 540px;
     overflow-y: scroll;
 
 }
