--- a/src/components/cart/cart.scss
+++ b/src/components/cart/cart.scss
@@ -33,10 +33,11 @@
 // Custom container
 .container__cart {
     width: 100%;
-    height: 100%;
+    min-height: 100%;
     max-width: 870px;
     margin-left: auto;
     margin-right: auto;
+    padding-bottom: 100px;
     // map-remove($map: , $keys: )
 
 }
