В этом этапе нет Gsap анимации

--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -1,5 +1,5 @@
 @import '../main/_index.scss';
-
+@import 'aos/dist/aos.css';
 // About water
 
 .about {
@@ -52,6 +52,19 @@
     }
 }
 
+.fade-up {
+    opacity: 0;
+    transform: translateY(20px);
+    transition: opacity 0.5s ease, transform 0.5s ease;
+  }
+  
+  .fade-up[data-aos="fade-up"].aos-animate {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  
+
+  
 //  Media
 
 @media (max-width: 450px) {
