--- a/src/components/history/history.scss
+++ b/src/components/history/history.scss
@@ -93,3 +93,11 @@
         }
     }
 }
+
+
+@media (max-width: 450px) {
+    .history__parallax--effects {
+        left: 0;
+        width: 100%;
+    }
+}
