--- a/src/components/cart/cart.scss
+++ b/src/components/cart/cart.scss
@@ -7,24 +7,32 @@
 }
 .cart {
     width: 50%;
-    height: 100vh;
+    height: 80vh;
 
     background-color: #fff;
     position: fixed;
-    top: 20%;
+    bottom: 0%;
     left: 25%;
 
     z-index: 10;
 
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.08);
     border-radius: 20px 20px 0px 0px;
-    padding: 40px 20px 0 20px;
 }
 .cart--close {
     position: absolute;
-    top: 60px;
-    right: 50px ;
+    top: 20px;
+    right: 20px ;
     @include defaultBtn;
+
+    background-color: #696969;
+    border-radius: 50px;
+    height: 25px;
+    width: 25px;
+
+    svg {
+        transform: translateY(-2px) translateX(0.4px);
+    }
 }
 .container--cart-mt {
     margin-top: 120px;
@@ -41,7 +49,8 @@
 }
 .cart__item {
     column-gap: 32px;
-    flex: 0 1 55%;
+    flex : 1 1 0%;
+    max-width: 500px;
 }
 .cart__info {
     row-gap: 20px;
@@ -55,11 +64,12 @@
 }
 .cart--controller {
     @include defaultBtn;
+    padding: 0 !important;
 
 }
 .cart--num {
     font-size: 16px;
-    font-weight: 700;
+    font-weight: 400;
 }
 .cart--controllers {
     column-gap: 8px ;
@@ -93,4 +103,58 @@
 }
 .cart-empty__content {
     flex: 0 1 50%;
+}
+
+.settings__item b, span {
+    font-size: 14px;
+}
+.cart__buy {
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    z-index: 3;
+
+    background-color: #FCFCFC;
+    padding: 13px 10px;
+
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.08);
+
+    button {
+    @include defaultBtn;
+    margin: 0 auto;
+    }
+}
+
+.accent__btn--disable {
+    background-color: #808090 !important;
+    color: #D9D9DD !important;
+}
+// 
+.buttons__controller__second {
+    display: none !important;
+}
+.buttons__controller {
+    column-gap: 20px ;
+}
+.cart__title {
+    font-size: 18px;
+    color: #2A2B40;
+    font-weight: 700;
+}
+// 
+@media (max-width: 768px) {
+    .cart  {
+        width: 100%;
+        left: 0;
+    }
+    .buttons__controller__first {
+        display: none !important;
+    }
+    .buttons__controller__second {
+        display: block !important;
+    }
+    .cart__block {
+        row-gap: 20px ;
+    }
+
 }
