--- a/src/components/main/_index.scss
+++ b/src/components/main/_index.scss
@@ -202,6 +202,9 @@ $primary-blue: #36A9E1;
     .header__lang {
         display: flex;
     }
+    .burgerMenus {
+        display: block;
+    }
 
 } // это media 
 
