--- a/src/components/FormPopup/FormPopup.scss
+++ b/src/components/FormPopup/FormPopup.scss
@@ -15,7 +15,8 @@ $formDarkClr: #2A2B40;
     transform: translateY(100%);
     border-radius: 30px 30px 0 0 ;
     transition: all .8s ease 0s;
-
+    
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.08);
 }
 .form__inner {
     padding-top: 36px;
