--- a/src/components/main/_index.scss
+++ b/src/components/main/_index.scss
@@ -27,6 +27,10 @@ $primary-blue: #36A9E1;
 
 
 // ! Main properties
+.link__btn {
+    display: inline-block !important;
+    text-decoration: none !important;
+}
 .accent__btn {
     padding: .389em 1.111em;
     border: 1px solid $light-color;
@@ -315,10 +319,10 @@ $primary-blue: #36A9E1;
     row-gap: 10px ;
 
     padding: 16px 20px;
-    transform: translateY(10px);
-    opacity: 0;
-    visibility: hidden;
-    transition: all .6s ease 0s;
+    // transform: translateY(10px);
+    // opacity: 0;
+    // visibility: hidden;
+    // transition: all .6s ease 0s;
 
 
 }
