--- a/src/components/сookieNotification/cookieNotification.scss
+++ b/src/components/сookieNotification/cookieNotification.scss
@@ -27,6 +27,11 @@
 .cookie__img {
     display: block;
 }
+
+.cookie__descr {
+    margin: 0;
+    padding: 0;
+}   
 @media (max-width: 768px) {
     .cookie__block {
         bottom: 0;
