--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -3,8 +3,18 @@
 
 .header {
 
+    a {
+        display: inline-block;
+        text-decoration: none;
+    }
+
     &--bg {
+        width: 100%;
         height: 100vh;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 3;
         @include bg__img("../../img/bg.png", center);
     }
     &__inner {
@@ -77,6 +87,18 @@
     &__burger {
         display: none;
     }
+
+    &__video {
+        width: 100%;
+        height: 100vh;
+        position: absolute;
+        top: 0;
+        left: 0;
+        transform: scale(1.5);
+    }
+}
+.header__inner-02 {
+    position: relative;
 }
 
 .is-active {
@@ -146,4 +168,39 @@
 .add-to-card {
     background: transparent;
     border: none;
+}
+.header__swiper-container {
+    position: relative;
+    z-index: 10;
+}
+.video__slider {
+
+    height: 100vh;
+
+    overflow: hidden;
+
+    video {
+        width: 100%;
+        height: 100%;
+        opacity: .7;
+        transform: scale(1.1);
+    }
+}
+.header__swiper-container {
+    position: relative;
+    z-index: 2;
+    background-color: #202020;
+
+}
+.button__controller {
+    position: absolute;
+    top: 0;
+}
+.video__slider-banner {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.img__banner {
+
 }
