--- a/src/components/loader/loader.scss
+++ b/src/components/loader/loader.scss
@@ -1,7 +1,7 @@
 .load {
     position: fixed;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background-color: #fbfbfb;
     z-index: 100;
     top: 0;
