--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -45,7 +45,8 @@
         margin-top: 130px;
         position: relative;
         p {
-            color: $light-color
+            color: $light-color;
+            margin-bottom: 0;
         }
         &::before {
             content: "";
