--- a/src/components/loader/loader.scss
+++ b/src/components/loader/loader.scss
@@ -1,5 +1,5 @@
 .load {
-    position: fixed;
+    position: fixed !important;
     width: 100%;
     height: 100vh;
     background-color: #fbfbfb;
