--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -10,10 +10,8 @@
 
     &--bg {
         width: 100%;
-        height: 100vh;
-        position: absolute;
-        top: 0;
-        left: 0;
+        min-height: 100vh;
+        height: 100%;
         z-index: 3;
         @include bg__img("../../img/bg.png", center);
     }
